build switch languge part 2

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -18,12 +18,82 @@
   "translate": "Translate",
   "profile": "Profile",
 
+  "my_courses": "My Courses",
+  "no_course": "No courses available",
+  "status": "Status",
+  "max_student": "Student limit",
+
+  "lessons": "Lessons",
+  "exams": "Exams",
+  "statistics": "Statistics",
+  "level": "level",
+  "error": "You are not allowed to take this exam",
+  "name_exam": "Exam name",
+  "end_of_exam": "End of exam",
+  "end_of_day": "End of day",
+
+  "lesson_detail": "Lesson details",
+  "vocabulary": "Vocabulary",
+  "start": "Start",
+  "exercises": "Exercise",
+  "sentence": "Sentence",
+  "meaning_of_the_word": "Meaning of the word",
+  "answer": "Answer",
+  "right": "Bravo!!!",
+  "result": "Result",
+  "completed_percentage": "You have completed",
+  "replay": "Play again",
+  "complete": "Complete",
+  "drag": "Drag the word to the appropriate meaning",
+
+  "vocab_practice": "Vocabulary Practice",
+  "drag_to_match": "Drag the word to the correct meaning",
+  "question": "Question",
+  "score": "Score",
+  "correct": "Correct!",
+  "wrong": "Wrong!",
+  "completed": "Completed",
+  "quiz_completed": "You have completed the quiz!",
+  "retry": "Retry",
+
+  "confirm_submit_exam": "Confirm submit exam",
+  "are_you_sure_submit": "Are you sure you want to submit the exam?",
+  "cancel": "Cancel",
+  "submit_exam": "Submit Exam",
+  "exam_result": "Exam Result",
+  "completed_exam": "You have completed the exam.",
+  "total_score": "Total Score",
+  "previous": "Previous",
+  "next": "Next",
+
+  "translate_vocab": "Translate Vocabulary",
+  "enter_vocab": "Enter Vocabulary",
+  "example_hello": "Example: Hello",
+  "from": "From",
+  "to": "To",
+  "result_will_show_here": "The result will be displayed here...",
+
+  "speaking_topic": "Speaking topic",
+  "lesson_speaking": "Lesson speaking",
+  "result_speaking": "Result speaking",
+  "your_speak": "Your speaking",
+  "back": "Back",
+
+  "attendance_title": "Study Check-in",
+  "already_checked_in": "You have already checked in today!",
+  "congratulations_study": "Congratulations on completing today's lesson!",
+  "continuous_streak": "Learning Streak",
+  "days": "days",
+  "check_in_today": "Check in today",
+  "go_back": "Go back",
+  "attendance_history": "Attendance History:",
+  "check_in_success": "Check-in successfully!",
+
   "leaderboard": "Leaderboard",
   "settings_and_options": "Settings & Options",
   "profile_detail": "Profile details",
   "about": "About",
   "logout": "Logout",
-  "score": "Score",
   "no_data": "No data",
   "setting": "Setting",
   "choose_language": "choose language",
