--- a/assets/lang/vi.json
+++ b/assets/lang/vi.json
@@ -18,12 +18,82 @@
   "translate": "Dịch",
   "profile": "Hồ sơ",
 
+  "my_courses": "Khóa học của bạn",
+  "no_course": "Không có khóa học nào",
+  "status": "Trạng thái",
+  "max_student": "Giới hạn sinh viên",
+
+  "lessons": "Bài học",
+  "exams": "Bài thi",
+  "statistics": "Thống kê",
+  "level": "Cấp độ",
+  "error": "Bạn không được phép làm bài thi này",
+  "name_exam": "Tên bài thi",
+  "end_of_exam": "Hết lượt thi",
+  "end_of_day": "Ngày hết hạn",
+
+  "lesson_detail": "Chi tiết về bài học",
+  "vocabulary": "Từ vựng",
+  "start": "Bắt đầu",
+  "exercises": "Bài tập",
+  "sentence": "Câu",
+  "meaning_of_the_word": "Nghĩa của từ",
+  "answer": "Trả lời",
+  "right": "Chính xác",
+  "result": "kết quả",
+  "completed_percentage": "bạn đã hoàn thành",
+  "replay": "Chơi lại",
+  "complete": "Hoàn thành",
+  "drag": "Kéo từ vào nghĩa cho phù hợp",
+
+  "vocab_practice": "Luyện tập từ vựng",
+  "drag_to_match": "Kéo từ vào nghĩa phù hợp",
+  "question": "Câu",
+  "score": "Điểm",
+  "correct": "Chính xác!",
+  "wrong": "Sai rồi!",
+  "completed": "Hoàn thành",
+  "quiz_completed": "Bạn đã hoàn thành bài luyện tập!",
+  "retry": "Làm lại",
+
+  "confirm_submit_exam": "Xác nhận nộp bài",
+  "are_you_sure_submit": "Bạn có chắc chắn muốn nộp bài không?",
+  "cancel": "Hủy",
+  "submit_exam": "Nộp bài",
+  "exam_result": "Kết quả bài thi",
+  "completed_exam": "Bạn đã hoàn thành bài thi.",
+  "total_score": "Tổng điểm",
+  "previous": "Quay lại",
+  "next": "Tiếp theo",
+
+  "translate_vocab": "Dịch Từ Vựng",
+  "enter_vocab": "Nhập từ vựng",
+  "example_hello": "Ví dụ: Hello",
+  "from": "Từ",
+  "to": "Sang",
+  "result_will_show_here": "Kết quả sẽ hiển thị ở đây...",
+
+  "speaking_topic": "Chủ đề luyện nói",
+  "lesson_speaking": "Bài luyện nói",
+  "result_speaking": "Kết Quả",
+  "your_speak": "Câu bạn nói",
+  "back": "Quay về",
+
+  "attendance_title": "Điểm danh học tập",
+  "already_checked_in": "Hôm nay bạn đã điểm danh rồi!",
+  "congratulations_study": "Chúc mừng bạn hoàn thành bài học hôm nay!",
+  "continuous_streak": "Chuỗi học liên tiếp",
+  "days": "ngày",
+  "check_in_today": "Điểm danh hôm nay",
+  "go_back": "Quay về",
+  "attendance_history": "Lịch sử điểm danh:",
+  "check_in_success": "Điểm danh thành công!",
+
   "leaderboard": "Bảng xếp hạng người học",
   "settings_and_options": "Cài đặt & Tùy chọn",
   "profile_detail": "Thông tin cá nhân",
   "about": "Giới thiệu",
   "logout": "Đăng xuất",
-  "score": "Điểm",
   "no_data": "Không có dữ liệu",
   "setting": "Cài đặt",
   "choose_language": "Chọn ngôn ngữ",
