--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -113,5 +113,6 @@
   "no_available_course": "No available course",
   "max": "Max",
   "join": "Join",
-  "day": "day"
+  "day": "day",
+  "dark_mode": "Dark Mode"
 }
