--- a/assets/lang/vi.json
+++ b/assets/lang/vi.json
@@ -113,5 +113,6 @@
   "no_available_course": "Không có khóa học nào khả dụng",
   "max": "Tối đa",
   "join": "Tham gia",
-  "day": "ngày"
+  "day": "ngày",
+  "dark_mode": "Chế độ tối"
 }
