--- a/assets/lang/ja.json
+++ b/assets/lang/ja.json
@@ -114,5 +114,10 @@
   "max": "最大",
   "join": "参加",
   "day": "日",
-  "dark_mode": "ダークモード"
+  "dark_mode": "ダークモード",
+
+  "chat_ai": "AIチャット",
+  "ai_welcome": "こんにちは！私はMeoV AI 🤖です。今日は何をお手伝いしましょうか？",
+  "ai_not_understand": "すみません、内容をうまく理解できませんでした 😢",
+  "common_error": "エラーが発生しました。しばらくしてからもう一度お試しください。"
 }
